# thesis-click-models

./: README.md  pyproject.toml
.local/: pyg_lib-0.4.0-cp312-cp312-linux_x86_64.whl  torch_cluster-1.6.3-cp312-cp312-linux_x86_64.whl  torch_geometric-2.6.1-py3-none-any.whl  torch_geometric-2.6.2-py3-none-any.whl  torch_scatter-2.1.2-cp312-cp312-linux_x86_64.whl  torch_sparse-0.6.18-cp312-cp312-linux_x86_64.whl  torch_spline_conv-1.2.2-cp312-cp312-linux_x86_64.whl
tests/: test_storage.py
tex/: nanolab2015.cls  report.tex  title.tex
thesis/session/: session.py  storage.py
